<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="Media">Медиатека</string>
    <string name="Poisk">Поиск</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="settings_setting">Настройки</string>
    <string name="T_Пользоватеьское_соглашение">Пользовательское соглашение</string>
    <string name="Т_Написать_в_поддержку">Написать в поддержку</string>
    <string name="Т_Поделиться_приложением">Поделиться приложением</string>
    <string name="Т_Темная_тема">Темная тема</string>
    <string name="hello">Привет, Android разработка — это круто!</string>
    <string name="my_mail">GalimovKamil452@gmail.com</string>
    <string name="and_dev_go">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agree_adress">https://yandex.ru/legal/practicum_offer/</string>
    <string name="hint">Поиск</string>
    <string name="empty">Empty</string>
    <string name="iTunes">https://itunes.apple.com</string>
    <string name="null_search">Ничего не нашлось</string>
    <string name="internet_error">Проблемы со связью</string>
    <string name="massage">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload_but">Обновить</string>
    <string name="massage_for_editText">Вводите название трека.</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="player_time_empty">00:00</string>
    <string name="player_country">Страна</string>
    <string name="player_style">Жанр</string>
    <string name="player_year">Год</string>
    <string name="player_album">Альбом</string>
    <string name="player_length">Длительность</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="create_playlist_but">Создать</string>
    <string name="new_playlist_quite_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_quite_massage">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_resume">Отмена</string>
    <string name="new_playlst_cancel">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_name_hint">Название*</string>
    <string name="new_info_hint">Описание</string>
    <string name="options_share">Поделиться</string>
    <string name="rename_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_title">Удалить плейлист</string>
    <string name="delete_text">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="track_delete_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="empty_tracks_message">В данном плейлисте нет треков которыми можно поделиться</string>
    <string name="save">Сохранить</string>
    <string name="create">Создать</string>
</resources>