<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:layout_gravity="top"
            android:layout_marginBottom="@dimen/_4dp"
            android:layout_marginTop="@dimen/_4dp"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_marginEnd="@dimen/_52dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/_26sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/_12dp"
            android:fontFamily="@font/ys_display_medium"/>
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Poisk_but"
        style="@style/main_buttons"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/Poisk"
        app:icon="@drawable/ic_poisk"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Media_but"
        style="@style/main_buttons"
        android:text="@string/Media"
        app:icon="@drawable/ic_media"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Set_but"
        style="@style/main_buttons"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"/>
</LinearLayout>