<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_new_plylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:id="@+id/new_playlist_title_bar">

        <ImageButton
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:background="@drawable/ic_back_arrow"
            android:id="@+id/new_playlist_quite_but" />

        <TextView
            style="@style/activities_name"
            android:text="@string/new_playlist_title"
            android:paddingTop="4dp"
            android:layout_marginStart="@dimen/_12dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/new_playlist_image"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:src="@drawable/new_image_empty_ic"
        android:background="@drawable/empty_newplaylist_image"
        android:scaleType="centerCrop"
        tools:ignore="contentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_playlist_title_bar"
        android:layout_marginTop="26dp" />

    <EditText
        android:id="@+id/new_playlist_name_et"
        style="@style/new_playlist_ets"
        android:layout_marginTop="@dimen/_33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_image"
        android:hint="@string/new_name_hint" />

    <EditText
        android:id="@+id/new_playlist_inf_et"
        style="@style/new_playlist_ets"
        android:layout_marginTop="@dimen/_17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_name_et"
        android:hint="@string/new_info_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_name_hint"
        app:layout_constraintStart_toStartOf="@id/new_playlist_name_et"
        app:layout_constraintBottom_toBottomOf="@id/new_playlist_name_et"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginBottom="46dp"
        android:paddingHorizontal="@dimen/_4dp"
        android:background="?attr/colorPrimaryVariant"
        android:textColor="@color/back_blue"
        android:visibility="gone"
        android:id="@+id/new_name_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_info_hint"
        app:layout_constraintStart_toStartOf="@id/new_playlist_inf_et"
        app:layout_constraintBottom_toBottomOf="@id/new_playlist_inf_et"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginBottom="46dp"
        android:paddingHorizontal="@dimen/_4dp"
        android:background="?attr/colorPrimaryVariant"
        android:textColor="@color/back_blue"
        android:visibility="gone"
        android:id="@+id/new_info_title" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44dp"
        android:background="@drawable/gray_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_17dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:enabled="false"
        android:id="@+id/create_playlist_but" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44dp"
        android:layout_marginHorizontal="@dimen/_17dp"
        android:fontFamily="@font/ys_display_regular"
        android:letterSpacing="0"
        android:text="@string/create_playlist_but"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/create_playlist_but"
        app:layout_constraintTop_toTopOf="@id/create_playlist_but"
        android:id="@+id/create_but_text" />
</androidx.constraintlayout.widget.ConstraintLayout>