<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".player.ui.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.ui.PlayerActivity"
        android:backgroundTint="?attr/colorPrimaryVariant">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/player_left_barrier"
            app:layout_constraintGuide_begin="@dimen/_24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/player_right_barrier"
            app:layout_constraintGuide_end="@dimen/_24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/player_left_barrier2"
            app:layout_constraintGuide_begin="@dimen/_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/player_right_barrier2"
            app:layout_constraintGuide_end="@dimen/_16dp" />

        <Button
            style="@style/quite_but"
            android:layout_height="@dimen/_48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/player_back" />

        <ImageView
            android:id="@+id/player_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:layout_marginHorizontal="@dimen/_24dp"
            android:layout_marginTop="@dimen/_26dp"
            android:src="@drawable/ic_empty_player_img"
            app:layout_constraintBottom_toTopOf="@id/player_title_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_back" />

        <TextView
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_26dp"
            android:textSize="@dimen/_22sp"
            android:text="@string/empty"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="@dimen/_24dp"
            app:layout_constraintTop_toBottomOf="@id/player_img"
            app:layout_constraintStart_toStartOf="@id/player_left_barrier"
            app:layout_constraintEnd_toEndOf="@id/player_right_barrier"
            android:id="@+id/player_title_name"
            app:layout_constraintHorizontal_bias="0"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_16dp"
            android:textSize="@dimen/_14sp"
            android:text="@string/empty"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="@dimen/_12dp"
            app:layout_constraintTop_toBottomOf="@id/player_title_name"
            app:layout_constraintStart_toStartOf="@id/player_left_barrier"
            app:layout_constraintEnd_toEndOf="@id/player_right_barrier"
            app:layout_constraintHorizontal_bias="0"
            android:id="@+id/player_artist_name"
            android:maxLines="1"
            android:ellipsize="end" />

        <ImageButton
            android:id="@+id/player_col_but"
            style="@style/player_mini_but"
            android:background="@drawable/ic_collection_but"
            app:layout_constraintBottom_toTopOf="@+id/player_length"
            app:layout_constraintStart_toEndOf="@id/player_left_barrier"
            app:layout_constraintTop_toBottomOf="@id/player_artist_name" />

        <ImageButton
            android:id="@+id/player_loved_but"
            style="@style/player_mini_but"
            android:background="@drawable/ic_loved_but"
            app:layout_constraintEnd_toStartOf="@id/player_right_barrier"
            app:layout_constraintTop_toBottomOf="@id/player_artist_name" />

        <ImageButton
            android:id="@+id/player_play_but"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:layout_marginTop="@dimen/_30dp"
            android:background="@drawable/ic_play_but"
            app:layout_constraintEnd_toStartOf="@+id/player_loved_but"
            app:layout_constraintStart_toEndOf="@+id/player_col_but"
            app:layout_constraintTop_toBottomOf="@id/player_artist_name"
            android:layout_marginHorizontal="@dimen/_55dp"
            android:enabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/player_time_empty"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toTopOf="@+id/player_length"
            app:layout_constraintEnd_toEndOf="@+id/player_play_but"
            app:layout_constraintStart_toStartOf="@+id/player_play_but"
            app:layout_constraintTop_toBottomOf="@+id/player_play_but"
            app:layout_constraintVertical_bias="0"
            android:id="@+id/play_timer" />

        <TextView
            style="@style/player_states"
            android:id="@+id/player_country"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/player_country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_left_barrier2" />

        <TextView
            style="@style/player_states"
            android:id="@+id/player_style"
            app:layout_constraintBottom_toTopOf="@id/player_country"
            app:layout_constraintStart_toStartOf="@id/player_left_barrier2"
            android:text="@string/player_style" />

        <TextView
            style="@style/player_states"
            android:id="@+id/player_year"
            app:layout_constraintBottom_toTopOf="@+id/player_style"
            app:layout_constraintStart_toStartOf="@id/player_left_barrier2"
            android:text="@string/player_year" />

        <TextView
            style="@style/player_states"
            android:id="@+id/player_album"
            app:layout_constraintBottom_toTopOf="@+id/player_year"
            app:layout_constraintStart_toStartOf="@id/player_left_barrier2"
            android:text="@string/player_album"
            android:visibility="visible" />

        <TextView
            style="@style/player_states"
            android:id="@+id/player_length"
            app:layout_constraintBottom_toTopOf="@+id/player_album"
            app:layout_constraintStart_toStartOf="@id/player_left_barrier2"
            android:text="@string/player_length" />

        <TextView
            style="@style/player_empty_states"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_right_barrier"
            app:layout_constraintStart_toEndOf="@id/player_country"
            android:layout_marginBottom="@dimen/_20dp"
            android:id="@+id/player_country_empty" />

        <TextView
            style="@style/player_empty_states"
            app:layout_constraintBottom_toTopOf="@id/player_country_empty"
            app:layout_constraintEnd_toStartOf="@id/player_right_barrier"
            app:layout_constraintStart_toEndOf="@id/player_style"
            android:id="@+id/player_style_empty" />

        <TextView
            style="@style/player_empty_states"
            app:layout_constraintBottom_toTopOf="@id/player_style_empty"
            app:layout_constraintEnd_toStartOf="@id/player_right_barrier"
            app:layout_constraintStart_toEndOf="@id/player_year"
            android:id="@+id/player_year_empty" />

        <TextView
            style="@style/player_empty_states"
            app:layout_constraintBottom_toTopOf="@id/player_year_empty"
            app:layout_constraintEnd_toStartOf="@id/player_right_barrier"
            app:layout_constraintStart_toEndOf="@id/player_album"
            android:id="@+id/player_album_empty"
            android:visibility="visible" />

        <TextView
            style="@style/player_empty_states"
            app:layout_constraintBottom_toTopOf="@id/player_album_empty"
            app:layout_constraintEnd_toStartOf="@id/player_right_barrier"
            app:layout_constraintStart_toEndOf="@id/player_length"
            android:id="@+id/player_length_empty" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/standard_bottom_sheet"
        android:background="@drawable/sheet_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/_500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/sheet_catch" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_playlist"
            android:textSize="@dimen/_19sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginTop="@dimen/_30dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/new_playlist_but"
            android:id="@+id/bottom_sheet_new_but"
            android:layout_marginTop="@dimen/_28dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            tools:listitem="@layout/simple_playlist_view"
            android:orientation="vertical"
            android:id="@+id/bottom_sheet_rv"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>